migrate to tailwindcss v4

--- a/dev/index.html
+++ b/dev/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,7 +9,7 @@
     <meta property="og:image" content="/images/og.jpg" />
   </head>
   <body class="flex flex-col min-h-[100svh]">
-    <header class="max-md:header-fixed p-6">
+    <header class="header-fixed p-6">
       <!-- add content -->
       <div class="flex justify-between gap-6">
         <div class="flex items-center justify-start gap-6 shrink-0">
@@ -78,16 +78,16 @@
       <section class="p-6">
         <!-- add content -->
         <div class="w-full md:max-w-3xl mx-auto text-center">
-          <h1 class="text-5xl my-10 font-bold">
+          <h1 class="text-5xl my-10">
             <span class="font-light gradient-text">LP starter</span>
           </h1>
-          <p class="font-light text-balance">
+          <p class="font-light text-balance text-neutral-500">
             rapidly build modern landing pages
           </p>
           <div class="py-16">
             <div class="flex flex-wrap gap-4 justify-center">
               <a
-                class="w-40 inline-flex justify-center items-center gap-2 rounded-md bg-blue-600 hover:bg-blue-500 px-8 py-3 font-medium text-sm text-white hover:text-white hover:shadow-lg focus:outline-none focus:ring"
+                class="w-40 inline-flex justify-center items-center gap-2 rounded-md bg-green-600 hover:bg-green-700 px-8 py-3 font-medium text-sm text-white hover:text-white hover:shadow-lg focus:outline-none focus:ring"
                 href="https://github.com/leandrow/lp-starter/blob/master/README.md"
                 target="_blank"
                 rel="noopener noreferrer"
