--- a/dev/index.html
+++ b/dev/index.html
@@ -79,7 +79,9 @@
         <!-- add content -->
         <div class="w-full md:max-w-3xl mx-auto text-center">
           <h1 class="text-5xl my-10">
-            <span class="font-light gradient-text">LP starter</span>
+            <span class="font-light gradient-text animate-background"
+              >LP starter</span
+            >
           </h1>
           <p class="font-light text-balance text-neutral-500">
             rapidly build modern landing pages
