--- a/dev/index.html
+++ b/dev/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LP starter</title>
     <meta name="description" content="Rapidly build modern landing pages" />
-    <meta property="og:image" content="/images/og.jpg" />
+    <meta property="og:image" content="/images/share.jpg" />
   </head>
   <body class="flex flex-col min-h-[100svh]">
     <header class="header-fixed p-6">
@@ -78,13 +78,12 @@
       <section class="p-6">
         <!-- add content -->
         <div class="w-full md:max-w-3xl mx-auto text-center">
-          <h1 class="text-5xl my-10">
-            <span class="font-light gradient-text animate-background"
-              >LP starter</span
-            >
+          <h1 class="text-5xl py-10">
+            welcome to
+            <span class="gradient-text animate-background">LP starter</span>
           </h1>
-          <p class="font-light text-balance text-neutral-500">
-            rapidly build modern landing pages
+          <p class="font-normal text-balance text-neutral-500">
+            Rapidly build modern landing pages
           </p>
           <div class="py-16">
             <div class="flex flex-wrap gap-4 justify-center">
@@ -113,7 +112,7 @@
                 ></i>
               </a>
             </div>
-            <p class="text-xs text-neutral-500 py-4 text-balance">
+            <p class="text-sm text-neutral-500 py-4 text-balance">
               <span
                 class="inline-block rounded-full bg-green-100 dark:bg-neutral-950 px-2 py-1 mr-1 font-medium text-green-700"
               >
@@ -121,8 +120,189 @@
               </span>
               Use
               <a href="https://www.hyperui.dev" target="_blank">HypeUI</a> by
-              simply copying the components code.
+              simply copying and pasting the components code.
             </p>
+          </div>
+          <div>
+            <p class="pb-12 text-xl font-semibold">some important features</p>
+            <div class="flex justify-center flex-wrap gap-3 sm:gap-10 pb-10">
+              <ul
+                class="space-y-3 min-w-40 text-left text-sm text-neutral-600 dark:text-neutral-400"
+              >
+                <li class="flex">
+                  <svg
+                    class="h-[1lh] w-5.5 shrink-0"
+                    viewBox="0 0 22 22"
+                    fill="none"
+                    stroke-linecap="square"
+                  >
+                    <circle cx="11" cy="11" r="11" class="fill-green-400/25" />
+                    <circle
+                      cx="11"
+                      cy="11"
+                      r="10.5"
+                      class="stroke-green-400/25"
+                    />
+                    <path
+                      d="M8 11.5L10.5 14L14 8"
+                      class="stroke-green-800 dark:stroke-green-300"
+                    />
+                  </svg>
+                  <p class="ml-3">Simple workflow</p>
+                </li>
+                <li class="flex">
+                  <svg
+                    class="h-[1lh] w-5.5 shrink-0"
+                    viewBox="0 0 22 22"
+                    fill="none"
+                    stroke-linecap="square"
+                  >
+                    <circle cx="11" cy="11" r="11" class="fill-green-400/25" />
+                    <circle
+                      cx="11"
+                      cy="11"
+                      r="10.5"
+                      class="stroke-green-400/25"
+                    />
+                    <path
+                      d="M8 11.5L10.5 14L14 8"
+                      class="stroke-green-800 dark:stroke-green-300"
+                    />
+                  </svg>
+                  <p class="ml-3">Tailwind CSS</p>
+                </li>
+                <li class="flex">
+                  <svg
+                    class="h-[1lh] w-5.5 shrink-0"
+                    viewBox="0 0 22 22"
+                    fill="none"
+                    stroke-linecap="square"
+                  >
+                    <circle cx="11" cy="11" r="11" class="fill-green-400/25" />
+                    <circle
+                      cx="11"
+                      cy="11"
+                      r="10.5"
+                      class="stroke-green-400/25"
+                    />
+                    <path
+                      d="M8 11.5L10.5 14L14 8"
+                      class="stroke-green-800 dark:stroke-green-300"
+                    />
+                  </svg>
+                  <p class="ml-3">Responsive menu</p>
+                </li>
+                <li class="flex">
+                  <svg
+                    class="h-[1lh] w-5.5 shrink-0"
+                    viewBox="0 0 22 22"
+                    fill="none"
+                    stroke-linecap="square"
+                  >
+                    <circle cx="11" cy="11" r="11" class="fill-green-400/25" />
+                    <circle
+                      cx="11"
+                      cy="11"
+                      r="10.5"
+                      class="stroke-green-400/25"
+                    />
+                    <path
+                      d="M8 11.5L10.5 14L14 8"
+                      class="stroke-green-800 dark:stroke-green-300"
+                    />
+                  </svg>
+                  <p class="ml-3">Dark mode</p>
+                </li>
+              </ul>
+              <ul
+                class="space-y-3 min-w-40 text-left text-sm text-neutral-600 dark:text-neutral-400"
+              >
+                <li class="flex">
+                  <svg
+                    class="h-[1lh] w-5.5 shrink-0"
+                    viewBox="0 0 22 22"
+                    fill="none"
+                    stroke-linecap="square"
+                  >
+                    <circle cx="11" cy="11" r="11" class="fill-green-400/25" />
+                    <circle
+                      cx="11"
+                      cy="11"
+                      r="10.5"
+                      class="stroke-green-400/25"
+                    />
+                    <path
+                      d="M8 11.5L10.5 14L14 8"
+                      class="stroke-green-800 dark:stroke-green-300"
+                    />
+                  </svg>
+                  <p class="ml-3">Custom fonts</p>
+                </li>
+                <li class="flex">
+                  <svg
+                    class="h-[1lh] w-5.5 shrink-0"
+                    viewBox="0 0 22 22"
+                    fill="none"
+                    stroke-linecap="square"
+                  >
+                    <circle cx="11" cy="11" r="11" class="fill-green-400/25" />
+                    <circle
+                      cx="11"
+                      cy="11"
+                      r="10.5"
+                      class="stroke-green-400/25"
+                    />
+                    <path
+                      d="M8 11.5L10.5 14L14 8"
+                      class="stroke-green-800 dark:stroke-green-300"
+                    />
+                  </svg>
+                  <p class="ml-3">Custom icons</p>
+                </li>
+                <li class="flex">
+                  <svg
+                    class="h-[1lh] w-5.5 shrink-0"
+                    viewBox="0 0 22 22"
+                    fill="none"
+                    stroke-linecap="square"
+                  >
+                    <circle cx="11" cy="11" r="11" class="fill-green-400/25" />
+                    <circle
+                      cx="11"
+                      cy="11"
+                      r="10.5"
+                      class="stroke-green-400/25"
+                    />
+                    <path
+                      d="M8 11.5L10.5 14L14 8"
+                      class="stroke-green-800 dark:stroke-green-300"
+                    />
+                  </svg>
+                  <p class="ml-3">Custom pages</p>
+                </li>
+                <li class="flex">
+                  <svg
+                    class="h-[1lh] w-5.5 shrink-0"
+                    viewBox="0 0 22 22"
+                    fill="none"
+                    stroke-linecap="square"
+                  >
+                    <circle cx="11" cy="11" r="11" class="fill-green-400/25" />
+                    <circle
+                      cx="11"
+                      cy="11"
+                      r="10.5"
+                      class="stroke-green-400/25"
+                    />
+                    <path
+                      d="M8 11.5L10.5 14L14 8"
+                      class="stroke-green-800 dark:stroke-green-300"
+                    />
+                  </svg>
+                  <p class="ml-3">Page 404</p>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </section>
